ci-cd-end2-end/infrastructure/ingress/tooling/tooling-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: nginx
  name: tooling
  namespace: dev
spec:
  rules:
  - host: "dev.tooling.devops-masterclass.link"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tooling
            port:
              number: 80
  tls:
  - hosts:
    - "tooling.devops-masterclass.link"
    secretName: "tooling.devops-masterclass.link"
